--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.0",
     "@types/uuid": "^9.0.1",
     "axios": "^1.3.4",
     "jotai": "^2.0.3",
